# kaleidoscope

./: .gitignore  README.md  pyproject.toml
lenses/: Culture_Lens.md  Financial_Lens.md  Operational_Lens.md  Technical_Lens.md  User_Lens.md
src/kaleidoscope/: __init__.py  __main__.py  analyzer.py  cli.py  lens_loader.py  models.py  providers.py  question_flow.py  report_writer.py  synthesizer.py
templates/: Lens_Template.md
