[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kaleidoscope"
version = "0.1.0"
description = "A local-first pre-decision review tool for engineering leaders."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
kaleidoscope = "kaleidoscope.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
